# Y3S2-ARTIFICIAL_INTELLIGENCE

ai_project_1/: README.md
ai_project_1/docs/: .gitignore  checkpoint1.tex
ai_project_1/output/: .gitignore  output_Genetic_Algorithm_10591473.csv  output_Genetic_Algorithm_10592572.csv  output_Genetic_Algorithm_10617894.csv  output_Simulated_Annealing_101735.csv  output_Simulated_Annealing_102494.csv  output_Simulated_Annealing_134707.csv  output_Simulated_Annealing_210454.csv  output_Simulated_Annealing_219913.csv  output_Simulated_Annealing_244355.csv  output_Simulated_Annealing_283044.csv  output_Simulated_Annealing_283731.csv  output_Variable_Neighbourhood_Search_492944.csv  output_Variable_Neighbourhood_Search_519700.csv  (+1 more)
ai_project_2/: .gitattributes  pyproject.toml
ai_project_2/data/processed/: labeled_train.parquet  test.parquet  unlabeled_train.parquet  val.parquet
ai_project_2/docs/: README.md  presentation.pptx
ai_project_2/model/: main.py
ai_project_2/model/artifacts/: model.joblib
ai_project_2/model/reports/metrics/: evaluation.json
ai_project_2/model/src/: config.py  pipeline.py
ai_project_2/model/src/analysis/: distributions.py
ai_project_2/model/src/data/: clean.py  encode.py  load.py  split.py
ai_project_2/model/src/evaluation/: explain.py  metrics.py  report.py
ai_project_2/model/src/features/: engineer.py  preprocess.py
ai_project_2/model/src/training/: model.py  model_io.py
ai_project_2/web/: app.py  requirements.txt
ai_project_2/web/css/: style.css
ai_project_2/web/html/: index.html
ai_project_2/web/js/: script.js
(+18 files in other folders)
