[project]
name = "model"
version = "0.1.0"
description = "Fraud detection model"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "python-pptx>=1.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "xgboost>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model"]
